# RustForms

./: .dockerignore  .env.docker  .env.example  .gitignore  BLUR_OVERLAY_GUIDE.md  Cargo.toml  LICENSE  README.md  deploy.sh  docker-compose.optimized.yml  docker-compose.yml  nx.json  package.json  pnpm-lock.yaml  tsconfig.json
apps/api/: .env.example  Cargo.toml  Dockerfile  Dockerfile.optimized  project.json
apps/api/.sqlx/: query-704ed4ca767a4a490a1289c0c65c9c01f8b4802e23bf9caf4636dd744682aca3.json  query-e2bc28db0fd8a424fc909d5e3fa781a39c1a5dac106d77edeaf7a2c75610b345.json  query-e2ee0027cb21bccf640eded386991e75a7daad5f9face5104bebda09acac83c2.json  query-fd29e5539c03b1d874e9f0805b24bdee2062f7bb6e14d0344a45f507d02843e8.json
apps/api/migrations/: 20250617045920_create_users_table.sql  20250621121517_create_forms_table.sql  20250622000001_create_submissions_table.sql
apps/api/src/: lib.rs  main.rs  models.rs  router.rs  state.rs
apps/api/src/auth/: handler.rs  middleware.rs  mod.rs  password.rs
apps/api/src/forms/: handler.rs  mod.rs
apps/api/tests/: auth_flow.rs  form_submission_flow.rs  forms_flow.rs
apps/web-ui/: Dockerfile  next.config.js  package.json  tailwind.config.js  tsconfig.json
apps/web-ui/components/: blur-overlay.tsx  create-form-dialog.tsx  delete-form-dialog.tsx
apps/web-ui/hooks/: use-forms.tsx
apps/web-ui/lib/: api.ts  auth-context.tsx  feature-flags.ts
apps/web-ui/old-config/: tailwind.config.ts
apps/web-ui/public/: site.webmanifest
apps/web-ui/src/app/: globals.css  layout.tsx  page.tsx
apps/web-ui/src/app/dashboard/: layout.tsx  page-new.tsx  page.tsx
apps/web-ui/src/app/dashboard/billing/: page.tsx
apps/web-ui/src/app/dashboard/forms/[id]/: page.tsx
apps/web-ui/src/app/dashboard/organization/: page.tsx
apps/web-ui/src/app/dashboard/settings/: page.tsx
apps/web-ui/src/app/dashboard/team/: page.tsx
apps/web-ui/src/app/login/: page.tsx
apps/web-ui/src/app/signup/: page.tsx
docker/: nginx.conf  postgres.conf
