[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
jsonwebtoken = "9"

# For sending email
# New line - Correct features
# Old Line
# Final Correct Line
lettre = { version = "0.11", default-features = false, features = [
    "builder",
    "smtp-transport",
    "tokio1",
    "tokio1-rustls",
    "rustls-platform-verifier",
    "ring",
    "file-transport",
] }

# For Database access with compile-time checks
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono", "ipnetwork"] } # <-- ADD "ipnetwork" HERE
uuid = { version = "1", features = ["v4", "serde"] } # <-- ADD THIS ENTIRE LINE
chrono = { version = "0.4", features = ["serde"] }

# For securely hashing passwords
argon2 = "0.5"

# For OpenAPI/Swagger documentation
utoipa = { version = "4.2.1", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "7.0.0", features = ["axum"] } # Check for latest compatible with utoipa and axum

# For CORS support
tower-http = { version = "0.5", features = ["cors"] }

# For IP address handling
ipnetwork = "0.20"

# File: apps/api/Cargo.toml
[dev-dependencies]
axum-test = "14.0"
# Add http so we can use status codes like StatusCode::CREATED
http = "1.1"